force-app/main/default/objects/QCC_Contact_Watchlist__c/QCC_Contact_Watchlist__c.object-meta.xml
<CustomObject>
    <label>Watchlist</label>
    <nameField>
        <displayFormat>CWL-{0000}</displayFormat>
        <label>Contact Watchlist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Watchlists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>