force-app/main/default/objects/QCC_Contact_Watchlist__c/fields/QCC_Contact__c.field-meta.xml
<CustomField>
    <fullName>QCC_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Automatically populated when watchlist record is created under the contact.</description>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Watchlists</relationshipLabel>
    <relationshipName>Contact_Watchlists</relationshipName>
    <type>Lookup</type>
</CustomField>