force-app/main/default/objects/QCC_Contact_Watchlist__c/fields/QCC_Watchlist_Category__c.field-meta.xml
<CustomField>
    <fullName>QCC_Watchlist_Category__c</fullName>
    <description>The type of request to watchout for the customer.</description>
    <label>Watchlist Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Seating</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>