force-app/main/default/objects/QCC_Contact_Watchlist__c/fields/QCC_Watchlist_Detail__c.field-meta.xml
<CustomField>
    <fullName>QCC_Watchlist_Detail__c</fullName>
    <description>Description for additional details on the watchlist category</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Watchlist Detail</label>
    <type>TextArea</type>
</CustomField>