force-app/main/default/objects/QCC_Contact_Watchlist__c/fields/QCC_Watchlist_End_Date__c.field-meta.xml
<CustomField>
    <fullName>QCC_Watchlist_End_Date__c</fullName>
    <description>Date until when the watchlist is considered</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Watchlist End Date</label>
    <type>Date</type>
</CustomField>