force-app/main/default/objects/QCC_Contact_Watchlist__c/fields/QCC_Watchlist_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>QCC_Watchlist_Start_Date__c</fullName>
    <description>Date on when to start considering the watchlist</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Watchlist Start Date</label>
    <type>Date</type>
</CustomField>